Energy net overhaul